testsuite/bsc.bugs/github/gh276/SuggestStringOf_NoCon.bsv.bsc-out.expected
checking package dependencies
compiling SuggestStringOf_NoCon.bsv
Error: "SuggestStringOf_NoCon.bsv", line 4, column 12: (T0003)
  Unbound constructor `Name'. Perhaps `stringOf' is missing?
