testsuite/bsc.bugs/github/gh276/SuggestStringOf_NoCon.bsv
typedef "Foo" Name;

function Bool isName (String x);
   return (Name == x);
endfunction
